--- a/templates/veterinaria/home.html
+++ b/templates/veterinaria/home.html
@@ -10,7 +10,7 @@
         <div class="top">
             <div class="logo">
                 <img src="/static/assets/logo.png" alt="">
-                <h2>VETE<span class="danger">RINARIA</span></h2>
+                <h2 class="title">VETERINARIA</h2>
             </div>
             <div class="close" id="close-btn">
                 <span class="material-icons-sharp">close</span>
@@ -36,7 +36,7 @@
                 </span>
                 <h3>Datos sistema</h3>
             </a>
-            <a href="#">
+            <a href="#" class="active">
                 <span class="material-icons-sharp">
                     person
                 </span>
@@ -76,6 +76,17 @@
             </a>
         </div>
     </aside>
+    <!--MAIN-->
+    <!--FINAL de MAIN-->
+    <div class="right">
+        <div class="top">
+            <button id="menu-btm">
+                <span class="material-icons-sharp">
+                    menu
+                </span>
+            </button>
+        </div>
+    </div>
 </div>
 <script src="/static/scripts/home.js"></script>
 {% endblock content %}
