--- a/templates/veterinaria/home.html
+++ b/templates/veterinaria/home.html
@@ -2,26 +2,10 @@
 {% load static%}
 {% block title %}Dashboard{% endblock title %}
 {% block content %}
-<link rel="stylesheet" href="{% static 'styles/home.css' %}">
-<header>
-    
-</header>
+{% include "includes/aside.html" %}
+
+<h1>Hola mundo</h1>
 
 
 
-
-
-<h1>Puto</h1>
-<p>dsjdjsd</p>
-
-
-
-
-
-
-
-
-
-
-<script src="/static/scripts/home.js"></script>
 {% endblock content %}
