--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -7,7 +7,11 @@
     --color-danger:#ff7782;
     --color-light:rgba(132,139,200,0.18);
     --color-background:#f6f6f9;
-    
+    --color-info-light:#dceleb;
+    --color-dark:#363949;
+    --color-primary-variant:#111e88;
+    --color-dark-variant:#677483;
+
     --card-border-radius:2rem;
     --border-radius:0.4rem;
     --border-radius-1:0.4rem;
@@ -44,6 +48,7 @@ body{
     background-color:var(--color-background);
     user-select: none;
     overflow-x: hidden;
+    color:var(--color-dark);
 }
 .container{
     display:grid;
@@ -180,4 +185,157 @@ aside .sidebar a:hover{
 aside .sidebar a:hover span{
     margin-left: 1rem;
 
+}
+
+.ventas{
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+    
+}
+
+
+/*TARJETAS*/
+main{
+    margin-top:1.4rem;
+
+}
+
+main .date{
+    display:inline-block;
+    background:var(--color-light);
+    border-radius: var(--border-radius-1);
+    margin-top:1rem;
+    padding: 0.5rem 1.6rem;
+}
+
+main .date input[type='date']{
+    background: transparent;
+    color:var(--color-dark);
+
+}
+
+main .insights{
+    display: grid;
+    grid-template-columns:1;
+    height:90%;
+    gap: 1.6rem;
+}
+
+main .insights > div {
+    background: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    margin-top: 1rem;
+    box-shadow: var(--box-shadow);
+    transition:all 300ms ease;
+}
+
+main .insights > div:hover{
+    box-shadow: none;
+}
+
+main .insights > div span{
+    background: var(color-primary);
+    padding:0.5rem;
+    border-radius:50%;
+    color:var(--color-white);
+    font-size: 2rem;
+}
+
+
+
+main .insights > div .middle{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+}
+
+main .insights h3{
+    margin: 1rem 0  0.6rem;
+    font-size: 1rem;
+}
+
+main .insights .progress{
+    position: relative;
+    width: 92px;
+    height:92px;
+    border-radius: 50%;
+}
+
+main .insights svg{
+    width: 7rem;
+    height:7rem;
+}
+
+main .insights small{
+    margin-top: 1.3rem;
+    display:block;
+}
+
+/*Header*/
+.right{
+    margin-top: 1.4rem;
+    height:9%;
+
+}
+.right .top{
+    display: flex;
+    justify-content:end;
+    gap: 2rem;
+}
+
+.right .top button{
+    display:none;
+}
+
+
+.right .theme-toggler{
+    background:var(--color-light);
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    height:1.6rem;
+    width:4.2rem;
+    cursor:pointer;
+    border-radius: var(--border-radius-1);
+}
+
+.right .theme-toggler span{
+    font-size: 1.2rem;
+    width:50%;
+    height:100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right .theme-toggler span.active{
+    background:var(--color-primary);
+    color: white;
+    border-radius:var(--border-radius-1);
+}
+
+.right .top .profile{
+    display:flex;
+    gap: 2rem;
+    text-align: right;
+}
+
+/*INICIO*/
+.sales{
+    margin: auto;
+}
+.descripcion{
+    margin:auto;
+    text-align: center;
+    color:#363949;
+    font-weight:bold;
+    font-size: 19px !important;
+}
+
+.logo-img{
+    width:19%;
+    height:21%;
+    margin-left: 42%;
 }
