--- a/templates/includes/aside.html
+++ b/templates/includes/aside.html
@@ -57,7 +57,7 @@
                 </span>
                 <h3>Medicinas</h3>
             </a>
-            <a href="#">
+            <a href="#" class="btn-ventas">
                 <span class="material-icons-sharp">
                     shopping_cart
                 </span>
@@ -74,6 +74,99 @@
         </div>
     </aside>
     <!--MAIN-->
+    <main>
+        <h1>Dashboard</h1>
+        <div class="date">
+            <input type="date">
+        </div>
+        <div class="insights">
+            <div class="sales">
+                <!--<span class="material-icons-Sharp">
+                    analytics
+                </span>
+                <div class="middle">
+                    <div class="lef">
+                        <h3>Total Ventas</h3>
+                        <h1>$35,989</h1>
+                    </div>
+                    <div class="progress">
+                        <svg>
+                            <circle cx='38' cy='38' r='36'>
+                            </circle>
+                        </svg>
+                        <div class="number">
+                            <p>81%</p>
+                        </div>
+                    </div>
+                </div>
+                <small class="text-muted">
+                Ultimas 24 Horas
+                </small>
+                Tarjeta de ventas-->
+                <div class="descripcionG">
+                    <h3 class="descripcion">El sistema veterinaria te da la bienvenida y pone a tu disposición el mejor servicio veterinario,
+                        encontraras servicios como asesorías preventivas, consulta general y especializada, cirugías,
+                        imagenologia (radiografías, ecografías), servicio de urgencias, hospitalización y todos los
+                        servicios que tu mascota requiera, brindando calidad y la más excelente atención, porque el
+                        bienestar de tu mascota es nuestra prioridad.​
+                    </h3>
+                </div>
+                <br>
+                <div class="imagen">
+                    <img src="/static/assets/logo.png" alt="" class="logo-img">
+                </div>
+                
+            </div>
+            <!--
+            <div class="expenses">
+                <span class="material-icons-Sharp">
+                    bar_chart
+                </span>
+                <div class="middle">
+                    <div class="lef">
+                        <h3>Total Compras</h3>
+                        <h1>$35,989</h1>
+                    </div>
+                    <div class="progress">
+                        <svg>
+                            <circle cx='38' cy='38' r='36'>
+                            </circle>
+                        </svg>
+                        <div class="number">
+                            <p>61%</p>
+                        </div>
+                    </div>
+                </div>
+                <small class="text-muted">
+                Ultimas 24 Horas
+                </small>
+            </div>
+            <div class="income">
+                <span class="material-icons-Sharp">
+                    stacked_line_chart
+                </span>
+                <div class="middle">
+                    <div class="lef">
+                        <h3>Total Ventas</h3>
+                        <h1>$35,989</h1>
+                    </div>
+                    <div class="progress">
+                        <svg>
+                            <circle cx='38' cy='38' r='36'>
+                            </circle>
+                        </svg>
+                        <div class="number">
+                            <p>44%</p>
+                        </div>
+                    </div>
+                </div>
+                <small class="text-muted">
+                Ultimas 24 Horas
+                </small>
+            </div>
+        -->
+        </div>
+    </main>
     <!--FINAL de MAIN-->
     <div class="right">
         <div class="top">
@@ -82,7 +175,26 @@
                     menu
                 </span>
             </button>
+            
+            <div class="theme-toggler">
+                <span class="material-icons-sharp active">
+                    light_mode
+                </span>
+                <span class="material-icons-sharp">
+                    dark_mode
+                </span>
+            </div>
+            <div class="profile">
+                <div class="info">
+                    <p>Hola,<b>Juan</b></p>
+                    <small class="text-muted">Admin</small>
+                </div>
+                <div class="profile-photo">
+                    <img src="/static/assets/user.png" alt="">
+                </div>
+            </div>
         </div>
+
     </div>
+    <script src="/static/scripts/home.js"></script>
 </div>
-<script src="/static/scripts/home.js"></script>
