--- a/templates/veterinaria/home.html
+++ b/templates/veterinaria/home.html
@@ -2,5 +2,16 @@
 {% load static%}
 {% block title %}Dashboard{% endblock title %}
 {% block content %}
-{% include "includes/aside.html" %}
+<div class="descripcionG">
+    <h3 class="descripcion">El sistema veterinaria te da la bienvenida y pone a tu disposición el mejor servicio veterinario,
+    encontraras servicios como asesorías preventivas, consulta general y especializada, cirugías,
+    imagenologia (radiografías, ecografías), servicio de urgencias, hospitalización y todos los
+    servicios que tu mascota requiera, brindando calidad y la más excelente atención, porque el
+    bienestar de tu mascota es nuestra prioridad.​
+    </h3>
+</div>
+    <br>
+    <div class="imagen">
+        <img src="/static/assets/logo.png" alt="" class="logo-img">
+    </div>
 {% endblock content %}
