se cambia ancho y alto de el cuadro

--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -325,6 +325,8 @@ main .insights small{
 /*INICIO*/
 .sales{
     margin: auto;
+    width: 128%;
+    height: 101%;
 }
 .descripcion{
     margin:auto;
