agregando tablas a la seccion ventas

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                 </span>
                 <h3>Medicinas</h3>
             </a>
-            <a href="{% url 'veterinaria_app:ventas' %}" class="btn-ventas">
+            <a href="{% url 'ventas_app:ventas' %}" class="btn-ventas">
                 <span class="material-icons-sharp">
                     shopping_cart
                 </span>
