--- a/static/styles/ventas.css
+++ b/static/styles/ventas.css
@@ -1,6 +1,43 @@
-.title-venta{
-    background-color: red;
+body{
+    
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+
+h1{
+    text-align: center;
+}
+#main-container{
+    margin: 150px auto;
+    width: 600px;
+}
+
 table{
-    border: 2px solid green;
+    background-color: white;
+    text-align: left;
+    margin-top: 50PX;
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: collapse;
+}
+th{
+    background-color: grey;
+    color: white;
+}
+tr:nth-child(odd){
+    background-color: #ddd;
+}
+thead{
+    background-color: black;
+}
+td,th{
+    border: 2PX solid black;
+    padding-left: 20px;
+    padding-right: 20PX;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+tr:hover{
+    background-color: black;
+    color: white;
 }
