Actualizando vista de ventas

--- a/templates/ventas/ventas.html
+++ b/templates/ventas/ventas.html
@@ -32,6 +32,10 @@
           <td>Clementina</td>     
           <td>800.000</td>     
           <td>0000222200000</td>
+          <td>
+            <a class="button small warning" href="#">Editar</a>
+            <a class="button small alert" href="#">Eliminar</a>
+          </td>
         </tr>
       
       </table>
