Modificacion en eside
Coloque img class para editar el logo en en eside

--- a/templates/includes/aside.html
+++ b/templates/includes/aside.html
@@ -6,7 +6,7 @@
     <aside>
         <div class="top">
             <div class="logo">
-                <img src="/static/assets/logo.png" alt="">
+                <img class="logo" src="/static/assets/logo.png" alt="">
                 <h2 class="title">VETERINARIA</h2>
             </div>
             <div class="close" id="close-btn">
@@ -15,7 +15,7 @@
         </div>
 
         <div class="sidebar">
-            <a href="#">
+            <a href="">
                 <span class="material-icons-sharp">
                     grid_view
                 </span>
