--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <aside>
         <div class="top">
             <div class="logo">
-                <img src="/static/assets/logo.png" alt="">
+                <img class="logo" src="/static/assets/logo.png" alt="">
                 <h2 class="title">VETERINARIA</h2>
             </div>
             <div class="close" id="close-btn">
