--- a/templates/login/Inicio.html
+++ b/templates/login/Inicio.html
@@ -13,13 +13,14 @@
       <h1>Iniciar sesión</h1>
       <form>
         <!-- USERNAME INPUT -->
-        <label for="username">Nombre de usuario</label>
-        <input type="text" placeholder="Introduzca su nombre de usuario">
+        <label  for="documento">Número de documento</label>
+        <input  id= "documento" type="text" placeholder="Introduzca su número de documento">
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
         <input type="password" placeholder="Introduzca su Contraseña">
         <input type="submit" value="Iniciar">
       </form>
     </div>
-  </body>
+    <script type="text/javascript" src="../../static/scripts/login.js"></script>
+    </body>
 </html>
