--- a/static/styles/estilo-tabla.css
+++ b/static/styles/estilo-tabla.css
@@ -1,36 +1,121 @@
 body{
-    background-color: rgb(238, 109, 34);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    background-color: rgba(191, 185, 182, 0.431);
+    font-family: 'Poppins', sans-serif;
+
 }
 
 h1{
-    text-align: center;
+    font-size: 20px;
+    text-align: left;
 }
-#main-container{
-    margin: 150px auto;
-    width: 600px;
+.contenedor{
+    float: right;
+    background: white;
+    box-shadow: 5px 5px 25px #999;
+    margin: 10px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 580px;
+    margin-top: 0px;
+    padding:  100%;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.header{
+    
+    display: inline-flex;
+    padding: 0;
+
+
+}
+h2.ventas{
+    font-size: 16px;
+    text-align: left;
+    width: 425px;
+    margin: 10px;
+    text-justify: auto;
+    color: rgb(81, 81, 81);
 }
 
+.contenedor{
+    text-align: right;
+}
+.contenedor .btn{
+    padding: 1px;
+    margin: 0;
+}
+.contenedor .btn .editar {
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid #66656551;
+    background-color: transparent;
+    height: 23px;
+    width: 80px;
+    color: #292929a5;
+    font-size: 12px;
+    box-shadow: 0 6px 6px rgba(198, 192, 192, 0.6);
+}
+.contenedor .btn .editar:hover{
+    background: #66656587;
+}
+.contenedor .btn .eliminar {
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid #66656527;
+    background-color: transparent;
+    height: 23px;
+    width: 80px;
+    color: #292929a5;
+    font-size: 12px;
+    box-shadow: 0 6px 6px rgba(198, 192, 192, 0.6);
+}
+.contenedor .btn .eliminar:hover{
+    background: #66656587;
+}
+.contenedor .btn .agregar {
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid #66656551;
+    background-color: transparent;
+    height: 23px;
+    width: 80px;
+    color: #292929a5;
+    font-size: 12px;
+    box-shadow: 0 6px 6px rgba(198, 192, 192, 0.6);
+}
+.contenedor .btn .agregar:hover{
+    background: #66656587;
+}
+
+
 table{
+    font-size: 16px;
     background-color: white;
-    margin-top: 50PX;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 0PX;
+    margin-left: 0px;
+    margin-right: 0px;
     border-collapse: collapse;
+    border-radius: 12px;
 }
 th{
-    background-color: dimgray;
+    text-align: center;
+    font-size: 14px;
+    color: rgb(81, 81, 81);
+    border: 1PX solid rgb(221, 220, 220);
+    border-right: 0px;
+    border-left: 0px;
+    border-radius: 12px;
+}
+td{
+    text-align: right;
+    font-size: 14px;
 }
 td,th{
-    border: 2PX solid black;
+    
     padding-left: 20px;
     padding-right: 20PX;
     padding-top: 10px;
     padding-bottom: 10px;
-}
-
-table:hover{
-    background-color: darkgrey;
-    transform: scale(1.50);
-    transition: all 1s ease;
 }
