--- a/templates/ventas/tabla-venta.html
+++ b/templates/ventas/tabla-venta.html
@@ -3,39 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>tabla-venta</title>
-    <link rel="stylesheet" href="../PROYECTO VETERINARIA/estilo-tabla.css">
+    <link rel="stylesheet" href="estilo-tabla.css">
+    <script src="https://kit.fontawesome.com/7fed639e7f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>VETERINARIA</h1>
-    <table>
-        <tr>
-          <th>ANIMAL</th>
-          <th>PROTETARIO</th>
-          <th>PRECIO</th>
-          <th>N° FACTURA</th>
-        </tr>
+  <h1>Ventas</h1>
+  <div class="contenedor">
+    <section class="header">
+      <h2 class="ventas">Ventas</h2>
+       <nav class="btn">
+          <button class="editar"><i class="fa-solid fa-crop"></i>  Editar </button>
+          <button class="eliminar"><i class="fa-regular fa-trash-can"></i>  Eliminar </button>
+          <button class="agregar"><i class="fa-solid fa-plus"></i>  Agregar</button>
+     </nav>
+    </section>
+     <table>
+          <tr>
+            <th>Animal</th>
+            <th>Propietario</th>
+            <th>Precio</th>
+            <th>N Factura</th>
+            <th>Edad</th>
+            <th>Enfermedad</th>
+         </tr>
       
-        <tr>
-          <td>gato</td>
-          <td>Sancho</td>
-          <td>1'200.000</td>
-          <td>0000111100000</td>
-        </tr>
+          <tr>
+           <td>gato</td>
+           <td>Sancho</td>
+           <td>1'200.000</td>
+           <td>0000111100000</td>
+           <td>11 años</td>
+           <td>Cancer</td>
+         </tr>
       
-        <tr>
-          <td>perro</td>
-          <td>Dagoberto</td>     
-          <td>500.000</td>
-          <td>0000122000000</td>
-        </tr>
+          <tr>
+            <td>perro</td>
+            <td>Dagoberto</td>     
+            <td>500.000</td>
+            <td>0000122000000</td>
+            <td>12 años</td>
+            <td>Fractura</td>
+          </tr>
       
-        <tr>     
-          <td>conejo</td>
-          <td>Clementina</td>     
-          <td>800.000</td>     
-          <td>0000222200000</td>
-        </tr>
+         <tr>     
+            <td>conejo</td>
+            <td>Clementina</td>     
+            <td>800.000</td>     
+            <td>0000222200000</td>
+            <td>2 años</td>
+            <td>Fractura</td>
+         </tr>
       
-      </table>
+       </table>
+    </div>
 </body>
 </html>
