--- a/templates/login/Inicio.html
+++ b/templates/login/Inicio.html
@@ -9,15 +9,15 @@
   <body>
 
     <div class="login-box">
-      <img src="/static/assets/login.jpg" class="avatar" alt="Avatar Image">
+      <img src="/static/assets/logo.png" class="avatar" alt="Avatar Image">
       <h1>Iniciar sesión</h1>
       <form>
         <!-- USERNAME INPUT -->
         <label  for="documento">Número de documento</label>
-        <input  id= "documento" type="text" placeholder="Introduzca su número de documento">
+        <input  id= "documento" type="text" placeholder="Documento">
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
-        <input type="password" placeholder="Introduzca su Contraseña">
+        <input type="password" placeholder="Contraseña">
         <input type="submit" value="Iniciar">
       </form>
     </div>
