--- a/templates/login/Inicio.html
+++ b/templates/login/Inicio.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Iniciar sesión</title>
+    <title>Veterinaria - Entrar </title>
     <link rel="stylesheet" href="{% static 'styles/login.css' %}">
   </head>
   <body>
