logo de la pestaña login

--- a/templates/login/Inicio.html
+++ b/templates/login/Inicio.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Veterinaria - Entrar </title>
     <link rel="stylesheet" href="{% static 'styles/login.css' %}">
+    <link rel="icon" href="/static/assets/logo.png">
   </head>
   <body>
 
