--- a/static/styles/ventas.css
+++ b/static/styles/ventas.css
@@ -1,46 +1,119 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700;800&family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
-
-body{
-    
-    font-family: poppins,sans-serif
+*{
+    font-family: 'Poppins', sans-serif;
 }
 
-h1{
-    text-align: center;
+section{
+    display:flex;
 }
-#main-container{
-    margin: 150px auto;
-    width: 600px;
-}
+.header{
+    width: 100%;
+    display: inline-flex;
+    padding: 0;
+    background-color: red;
 
-table{
-    background-color: white;
+}
+h2.ventas{
+    font-size: 16px;
     text-align: left;
-    margin-top: 50PX;
-    margin-left: auto;
-    margin-right: auto;
-    border-collapse: collapse;
-}
-th{
-    background-color: grey;
-    color: white;
-}
-tr:nth-child(odd){
-    background-color: #ddd;
-}
-thead{
-    background-color: black;
-}
-td,th{
-    border: 2PX solid black;
-    padding-left: 20px;
-    padding-right: 20PX;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    width: 425px;
+    margin: 10px;
+    text-justify: auto;
+    color: rgb(81, 81, 81);
 }
 
-tr:hover{
-    background-color: black;
-    color: white;
+.contenedor .btn{
+    padding: 1px;
+    margin: 0;
+}
+.contenedor .btn .editar {
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid #66656551;
+    height: 23px;
+    width: 80px;
+    color: #292929a5;
+    font-size: 12px;
+    box-shadow: 0 6px 6px rgba(198, 192, 192, 0.6);
+}
+
+.contenedor .btn .eliminar
+main{
+    margin-top:1.4rem;
+}
+
+main .date{
+    display:inline-block;
+    background:var(--color-light);
+    border-radius: var(--border-radius-1);
+    margin-top:1rem;
+    padding: 0.5rem 1.6rem;
+}
+
+main .date input[type='date']{
+    background: transparent;
+    color:var(--color-dark);
+
+}
+
+main .insights{
+    display: grid;
+    grid-template-columns:1;
+    height:90%;
+    gap: 1.6rem;
+}
+
+main .insights > div {
+    background: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    margin-top: 1rem;
+    box-shadow: var(--box-shadow);
+    transition:all 300ms ease;
+}
+
+main .insights > div:hover{
+    box-shadow: none;
+}
+
+main .insights > div span{
+    background: var(color-primary);
+    padding:0.5rem;
+    border-radius:50%;
+    color:var(--color-white);
+    font-size: 2rem;
+}
+
+
+
+main .insights > div .middle{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+}
+
+main .insights h3{
+    margin: 1rem 0  0.6rem;
+    font-size: 1rem;
+}
+
+main .insights .progress{
+    position: relative;
+    width: 92px;
+    height:92px;
+    border-radius: 50%;
+}
+
+main .insights svg{
+    width: 7rem;
+    height:7rem;
+}
+
+main .insights small{
+    margin-top: 1.3rem;
+    display:block;
+}
+.sales{
+    border:2px solid black;
 }
