--- a/templates/ventas/tabla-venta.html
+++ b/templates/ventas/tabla-venta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>tabla-venta</title>
-    <link rel="stylesheet" href="estilo-tabla.css">
+    <link rel="stylesheet" href="{% static 'styles/estilo-tabla.css' %}    ">
     <script src="https://kit.fontawesome.com/7fed639e7f.js" crossorigin="anonymous"></script>
 </head>
 <body>
