--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
                 </span>
                 <h3>Ventas</h3>
             </a>
-            <a href="#">
+            <a href="#" class="salir">
                 <span class="material-icons-sharp">
                     logout
                 </span>
@@ -106,7 +106,7 @@
             </div>
             <div class="profile">
                 <div class="info">
-                    <p>Hola,<b>Juan</b></p>
+                    <p>Hola,<b class="user"> Admin</b></p>
                     <small class="text-muted">Admin</small>
                 </div>
                 <div class="profile-photo">
@@ -116,6 +116,6 @@
         </div>
     </div>
 </div>
-<script src="{% static 'scripts/home.js' %}" type="text/javascript"></script>
+<script src="{% static 'scripts/home.js' %}"></script>
 </body>
 </html>
