--- a/templates/login/Inicio.html
+++ b/templates/login/Inicio.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="{% static 'styles/login.css' %}">
   </head>
   <body>
-
+    <img src="" alt="">
     <div class="login-box">
       <img src="/static/assets/login.jpg" class="avatar" alt="Avatar Image">
       <h1>Iniciar sesión</h1>
       <form>
         <!-- USERNAME INPUT -->
         <label for="username">Nombre de usuario</label>
-        <input type="text" placeholder="Introduzca su nombre de usuario">
+        <input type="text" placeholder="Introduzca su nombre de usuario" id="documento">
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
         <input type="password" placeholder="Introduzca su Contraseña">
@@ -22,4 +22,5 @@
       </form>
     </div>
   </body>
+  <script src="{% static 'scripts/login.js' %}"></script>
 </html>
