--- a/static/styles/ventas.css
+++ b/static/styles/ventas.css
@@ -9,18 +9,18 @@ section{
 }
 .header{
     width: 100%;
-    display: inline-flex;
+    display: flex;
     padding: 0;
-    background-color: red;
 
 }
 h2.ventas{
-    font-size: 16px;
+    font-size: 40px;
     text-align: left;
     width: 425px;
     margin: 10px;
     text-justify: auto;
     color: rgb(81, 81, 81);
+    flex-grow: 9;
 }
 
 .contenedor .btn{
@@ -38,82 +38,88 @@ h2.ventas{
     box-shadow: 0 6px 6px rgba(198, 192, 192, 0.6);
 }
 
-.contenedor .btn .eliminar
-main{
-    margin-top:1.4rem;
+.contenedor .btn .eliminar {
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid #66656527;
+    background-color: transparent;
+    height: 23px;
+    width: 80px;
+    color: #292929a5;
+    font-size: 12px;
+    box-shadow: 0 6px 6px rgba(198, 192, 192, 0.6);
+}
+.contenedor .btn .eliminar:hover{
+    background: #66656587;
+}
+.contenedor .btn .agregar {
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid #66656551;
+    background-color: transparent;
+    height: 23px;
+    width: 80px;
+    color: #292929a5;
+    font-size: 12px;
+    box-shadow: 0 6px 6px rgba(198, 192, 192, 0.6);
+}
+.contenedor .btn .agregar:hover{
+    background: #66656587;
 }
 
-main .date{
-    display:inline-block;
-    background:var(--color-light);
-    border-radius: var(--border-radius-1);
-    margin-top:1rem;
-    padding: 0.5rem 1.6rem;
+.btn{
+    padding:10px;
+    padding-top:20px;
+    flex-grow:3;
+}
+.editar {
+    padding:1.5%;
+    margin-right: 4%;
+    font-size: 17px;
+    border:2px solid #BEBEBE;
+    border-radius:7px;
+    background-color:#f6f6f9;
+}
+.eliminar{
+    padding:1.5%;
+    margin-right: 4%;
+    font-size: 17px;
+    border:2px solid #BEBEBE;
+    border-radius:7px;
+    background-color:#f6f6f9;
+}
+.agregar{
+    padding:1.5%;
+    margin-right: 4%;
+    font-size: 17px;
+    border:2px solid #BEBEBE;
+    border-radius:7px;
+    background-color:#f6f6f9;
 }
 
-main .date input[type='date']{
-    background: transparent;
-    color:var(--color-dark);
-
+table{
+    width:100%;
+    font-size: 16px;
+    margin-top: 2%;
+    margin-left: 0px;
+    margin-right: 0px;
+    border-radius: 12px;
 }
-
-main .insights{
-    display: grid;
-    grid-template-columns:1;
-    height:90%;
-    gap: 1.6rem;
+th{
+    text-align:left;
+    font-size: 14px;
+    color: rgb(81, 81, 81);
+    border-right: 0px;
+    border-left: 0px;
+    border-radius: 12px;
 }
-
-main .insights > div {
-    background: var(--color-white);
-    padding: var(--card-padding);
-    border-radius: var(--card-border-radius);
-    margin-top: 1rem;
-    box-shadow: var(--box-shadow);
-    transition:all 300ms ease;
+td{
+    text-align:left;
+    font-size: 17px;
 }
-
-main .insights > div:hover{
-    box-shadow: none;
-}
-
-main .insights > div span{
-    background: var(color-primary);
-    padding:0.5rem;
-    border-radius:50%;
-    color:var(--color-white);
-    font-size: 2rem;
-}
-
-
-
-main .insights > div .middle{
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
-}
-
-main .insights h3{
-    margin: 1rem 0  0.6rem;
-    font-size: 1rem;
-}
-
-main .insights .progress{
-    position: relative;
-    width: 92px;
-    height:92px;
-    border-radius: 50%;
-}
-
-main .insights svg{
-    width: 7rem;
-    height:7rem;
-}
-
-main .insights small{
-    margin-top: 1.3rem;
-    display:block;
-}
-.sales{
-    border:2px solid black;
+td,th{
+    padding-left: 20px;
+    padding-right: 20PX;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
