--- a/templates/historial/historial.html
+++ b/templates/historial/historial.html
@@ -3,25 +3,41 @@
 {% block title %}Dashboard
 {% endblock title %}
 {% block content %}
+<link rel="stylesheet" href="{% static 'styles/ventas.css' %}">
 <link rel="stylesheet" href="{% static 'styles/historial.css' %}">
-<h1 class="title-venta">Historial</h1>
-<!-- Tab de Navegacion en la pestaña de Historial clinico -->
-<div class="tab-historia"> 
-    <div class="lbl-tab">
-        <label for="radio1">Formulario</label>
-        <label for="radio2">Historias Clinicas</label>
-    </div>
-    <div class="content">
-        <input type="radio" name="radio" id="radio1">
-        <div class="tab1">
-            <h2>Formulario</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur alias eius fugiat dolorum ab quo sint, consequatur similique non corrupti accusantium placeat! Unde repudiandae, impedit minus dolore quo veritatis reiciendis?</p>
-        </div>
-        <input type="radio" name="radio" id="radio2">
-        <div class="tab2">
-            <h2>Historias Clinicas</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, praesentium id. Maxime exercitationem veritatis omnis eius, voluptates debitis. Natus maiores nam dolore enim? Inventore assumenda dolores sequi labore magni voluptatum!</p>
-        </div>
-    </div>
-</div>
+<script src="https://kit.fontawesome.com/7fed639e7f.js" crossorigin="anonymous"></script>
+    <section class="header">
+      <h2 class="ventas">Historial Clinico</h2>
+       <nav class="btn">
+          <button class="editar"><i class="fa-solid fa-crop"></i>  Editar </button>
+          <button class="eliminar"><i class="fa-regular fa-trash-can"></i>  Eliminar </button>
+          <button class="agregar"><i class="fa-solid fa-plus"></i>  Agregar</button>
+        </nav>
+    </section>
+     <table>
+          <tr class="propiedad">
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Tipo Mascota</th>
+            <th>Nombre Mascota</th>
+            <th>Edad</th>
+            <th>Enfermedad</th>
+            <th class="foto">Foto</th>
+            <th>Fecha Nacimiento</th>
+            <th class="celdaCrud"></th>
+         </tr>
+      
+          <tr id="valores">
+           <td>Motita</td>
+           <td>Perez</td>
+           <td>Perro</td>
+           <td>Motis</td>
+           <td>2 años</td>
+           <td>carvos</td>
+           <td><img class="imagen"src="https://images.ecestaticos.com/6uBjSmsBorRk6l_IHAxkBS1JCwE=/114x0:1997x1410/1200x900/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2F721%2F122%2F714%2F72112271431cb1078c3fe3e75ad5ab41.jpg" alt="" width="100" height="100"></td>
+           <td>2022-02-09</td>
+           <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
+         </tr>
+       </table>
+       <script src="{% static 'scripts/ventas.js' %}"></script>
 {% endblock content %}
