agregando create a la tabla ventas

--- a/templates/ventas/agregar.html
+++ b/templates/ventas/agregar.html
@@ -3,5 +3,11 @@
 {% block title %}Dashboard
 {% endblock title %}
 {% block content %}
+<h1>Registro usuario</h1>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Guardar</button>
+    </form>
 
 {% endblock content %}
