--- a/templates/ventas/ventas.html
+++ b/templates/ventas/ventas.html
@@ -10,136 +10,37 @@
        <nav class="btn">
           <button class="editar"><i class="fa-solid fa-crop"></i>  Editar </button>
           <button class="eliminar"><i class="fa-regular fa-trash-can"></i>  Eliminar </button>
-          <button class="agregar"><i class="fa-solid fa-plus"></i>  Agregar</button>
+          <a class="agregar" href="{% url 'ventas_app:formulario' %}"><i class="fa-solid fa-plus"></i>Agregar</a>
         </nav>
     </section>
      <table>
-          <tr class="propiedad">
-            <th>Animal</th>
-            <th>Propietario</th>
-            <th>Precio</th>
-            <th>N Factura</th>
-            <th>Edad</th>
-            <th>Enfermedad</th>
-            <th class="celdaCrud"></th>
-         </tr>
-      
-          <tr id="valores">
-           <td>gato</td>
-           <td>Sancho</td>
-           <td>1'200.000</td>
-           <td>0000111100000</td>
-           <td>11 años</td>
-           <td>Cancer</td>
-           <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
-         </tr>
-      
-          <tr>
-            <td>perro</td>
-            <td>Dagoberto</td>     
-            <td>500.000</td>
-            <td>0000122000000</td>
-            <td>12 años</td>
-            <td>Fractura</td>
-            <td class="btnEditar"></td>
+       <thead>
+
+         <tr class="propiedad">
+           <th>Nombre</th>
+           <th>Descripcion</th>
+           <th>Precio</th>
+           <th>Iva</th>
+           <th>Stock</th>
+           <th class="celdaCrud"></th>
           </tr>
-      
-         <tr>     
-            <td>conejo</td>
-            <td>Clementina</td>     
-            <td>800.000</td>     
-            <td>0000222200000</td>
-            <td>2 años</td>
-            <td>Fractura</td>
-            <td class="btnEditar"></td>
-         </tr>
-         <tr>
-          <td>gato</td>
-          <td>Sancho</td>
-          <td>1'200.000</td>
-          <td>0000111100000</td>
-          <td>11 años</td>
-          <td>Cancer</td>
-          <td class="btnEditar"></td>
-        </tr>
-     
-         <tr>
-           <td>perro</td>
-           <td>Dagoberto</td>     
-           <td>500.000</td>
-           <td>0000122000000</td>
-           <td>12 años</td>
-           <td>Fractura</td>
-           <td class="btnEditar"></td>
-         </tr>
-     
-        <tr>     
-           <td>conejo</td>
-           <td>Clementina</td>     
-           <td>800.000</td>     
-           <td>0000222200000</td>
-           <td>2 años</td>
-           <td>Fractura</td>
-           <td class="btnEditar"></td>
-        </tr>
-        <tr>
-          <td>gato</td>
-          <td>Sancho</td>
-          <td>1'200.000</td>
-          <td>0000111100000</td>
-          <td>11 años</td>
-          <td>Cancer</td>
-          <td class="btnEditar"></td>
-        </tr>
-     
-         <tr>
-           <td>perro</td>
-           <td>Dagoberto</td>     
-           <td>500.000</td>
-           <td>0000122000000</td>
-           <td>12 años</td>
-           <td>Fractura</td>
-           <td class="btnEditar"></td>
-         </tr>
-     
-        <tr>     
-           <td>conejo</td>
-           <td>Clementina</td>     
-           <td>800.000</td>     
-           <td>0000222200000</td>
-           <td>2 años</td>
-           <td>Fractura</td>
-           <td class="btnEditar"></td>
-        </tr>
-        <tr>
-          <td>gato</td>
-          <td>Sancho</td>
-          <td>1'200.000</td>
-          <td>0000111100000</td>
-          <td>11 años</td>
-          <td>Cancer</td>
-          <td class="btnEditar"></td>
-        </tr>
-     
-         <tr>
-           <td>perro</td>
-           <td>Dagoberto</td>     
-           <td>500.000</td>
-           <td>0000122000000</td>
-           <td>12 años</td>
-           <td>Fractura</td>
-           <td class="btnEditar"></td>
-         </tr>
-     
-        <tr>     
-           <td>conejo</td>
-           <td>Clementina</td>     
-           <td>800.000</td>     
-           <td>0000222200000</td>
-           <td>2 años</td>
-           <td>Fractura</td>
-           <td class="btnEditar"></td>
-        </tr>  
+          
+        </thead>
+        <tbody>
+          
+          {% for p in object_list %}
+          <tr id="valores">
+            <td>{{ p.nombre }}</td>
+            <td>{{ p.descripcion }}</td>
+            <td>{{ p.precio }}</td>
+            <td>{{ p.iva }}</td>
+            <td>{{ p.stock }}</td>
+            <td class="celdaCrud"><a href="#"><i class="agregarIcono"></i></a></td>
+          </tr>
+          {% endfor %}
+          
+        </tbody>
+          
        </table>
        <script src="{% static 'scripts/ventas.js' %}"></script>
 {% endblock content %}
