--- a/templates/ventas/ventas.html
+++ b/templates/ventas/ventas.html
@@ -41,7 +41,7 @@
             <td>0000122000000</td>
             <td>12 años</td>
             <td>Fractura</td>
-            <td class="btnEditar"></td>
+            <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
           </tr>
       
          <tr>     
@@ -51,7 +51,7 @@
             <td>0000222200000</td>
             <td>2 años</td>
             <td>Fractura</td>
-            <td class="btnEditar"></td>
+            <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
          </tr>
          <tr>
           <td>gato</td>
@@ -60,7 +60,7 @@
           <td>0000111100000</td>
           <td>11 años</td>
           <td>Cancer</td>
-          <td class="btnEditar"></td>
+          <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
         </tr>
      
          <tr>
@@ -70,7 +70,7 @@
            <td>0000122000000</td>
            <td>12 años</td>
            <td>Fractura</td>
-           <td class="btnEditar"></td>
+           <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
          </tr>
      
         <tr>     
@@ -80,7 +80,7 @@
            <td>0000222200000</td>
            <td>2 años</td>
            <td>Fractura</td>
-           <td class="btnEditar"></td>
+           <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
         </tr>
         <tr>
           <td>gato</td>
@@ -89,7 +89,7 @@
           <td>0000111100000</td>
           <td>11 años</td>
           <td>Cancer</td>
-          <td class="btnEditar"></td>
+          <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
         </tr>
      
          <tr>
@@ -99,7 +99,7 @@
            <td>0000122000000</td>
            <td>12 años</td>
            <td>Fractura</td>
-           <td class="btnEditar"></td>
+           <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
          </tr>
      
         <tr>     
@@ -109,7 +109,7 @@
            <td>0000222200000</td>
            <td>2 años</td>
            <td>Fractura</td>
-           <td class="btnEditar"></td>
+           <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
         </tr>
         <tr>
           <td>gato</td>
@@ -118,7 +118,7 @@
           <td>0000111100000</td>
           <td>11 años</td>
           <td>Cancer</td>
-          <td class="btnEditar"></td>
+          <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
         </tr>
      
          <tr>
@@ -128,7 +128,7 @@
            <td>0000122000000</td>
            <td>12 años</td>
            <td>Fractura</td>
-           <td class="btnEditar"></td>
+           <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
          </tr>
      
         <tr>     
@@ -138,7 +138,7 @@
            <td>0000222200000</td>
            <td>2 años</td>
            <td>Fractura</td>
-           <td class="btnEditar"></td>
+           <td class="celdaCrud"><a href="{% url 'ventas_app:ventas' %}"><i class="agregarIcono"></i></a></td>
         </tr>  
        </table>
        <script src="{% static 'scripts/ventas.js' %}"></script>
