--- a/static/styles/ventas.css
+++ b/static/styles/ventas.css
@@ -101,7 +101,7 @@ h2.ventas{
     display: inline-flex;
     padding: 0;
     background-color: red;
-
+}
 table{
     width:100%;
     font-size: 16px;
