--- a/templates/user/inicio.html
+++ b/templates/user/inicio.html
@@ -12,13 +12,15 @@
     <div class="login-box">
       <img src="/static/assets/logo.png" class="avatar" alt="Avatar Image">
       <h1>Iniciar sesión</h1>
-      <form>
+      <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
         <!-- USERNAME INPUT -->
-        <label  for="documento">Número de documento</label>
-        <input  id= "documento" type="text" placeholder="Documento">
+        <label  for="documento">Cedula
+          {{ form.cedula }}
+        </label>
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
-        <input type="password" placeholder="Contraseña">
+        {{ form.password }}
         <input type="submit" value="Iniciar">
       </form>
     </div>
