cambios en la carpeta administrador

--- a/templates/administrador/home.html
+++ b/templates/administrador/home.html
@@ -30,15 +30,15 @@
                 </span>
                 <h3>Inicio</h3>
             </a>
-            <a href="{% url 'veterinaria_app:historial' %}" class="historial">
+            <a href="{% url 'veterinaria_app:resgistrarUsuario' %}" class="historial">
                 <span class="material-icons-sharp">
-                    history
+                    app_registration
                 </span>
                 <h3>Registrar Usuario</h3>
             </a>
             <a href="#" class="datos">
                 <span class="material-icons-sharp">
-                    show_chart
+                    person
                 </span>
                 <h3>Tabla Usuarios</h3>
             </a>
